Refactor ServerFacadeTests to initialize serverFacade in setUp method instead of init, ensuring proper setup for each test.