@@ -1,14 +1,16 @@
-package server;
+package client;
 
 import model.AuthData;
-import model.UserData;
 import model.GameData;
 import chess.ChessGame;
 import org.junit.jupiter.api.*;
+import server.ResponseException;
+import server.ServerFacade;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ServerFacadeTests {
-    private static ServerFacade serverFacade;
+    private ServerFacade serverFacade;
     private static final String TEST_USERNAME = "testUser";
     private static final String TEST_PASSWORD = "testPass";
     private static final String TEST_EMAIL = "test@example.com";
@@ -16,12 +18,13 @@ public class ServerFacadeTests {
 
     @BeforeAll
     public static void init() {
-        // this.serverFacade = new ServerFacade("http://localhost:4567");
-        this.serverFacade = new ServerFacade("http://localhost:8080");
+        // Initialize any static resources if needed
     }
 
     @BeforeEach
     public void setUp() throws ResponseException {
+        // Initialize serverFacade before each test
+        serverFacade = new ServerFacade("http://localhost:8080");
         // Clear the database before each test
         serverFacade.clear();
         // Register a test user and get auth token
@@ -49,9 +52,9 @@ public class ServerFacadeTests {
         }
 
         // Second registration with same username
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.register(TEST_USERNAME, TEST_PASSWORD, TEST_EMAIL);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.register(TEST_USERNAME, TEST_PASSWORD, TEST_EMAIL)
+        );
 
         assertEquals(403, exception.getStatusCode());
     }
@@ -59,21 +62,21 @@ public class ServerFacadeTests {
     @Test
     public void testRegisterInvalidInput() {
         // Test with empty username
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.register("", TEST_PASSWORD, TEST_EMAIL);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.register("", TEST_PASSWORD, TEST_EMAIL)
+        );
         assertTrue(exception.getMessage().contains("failure"));
 
         // Test with empty password
-        exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.register(TEST_USERNAME, "", TEST_EMAIL);
-        });
+        exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.register(TEST_USERNAME, "", TEST_EMAIL)
+        );
         assertTrue(exception.getMessage().contains("failure"));
 
         // Test with empty email
-        exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.register(TEST_USERNAME, TEST_PASSWORD, "");
-        });
+        exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.register(TEST_USERNAME, TEST_PASSWORD, "")
+        );
         assertTrue(exception.getMessage().contains("failure"));
     }
 
@@ -101,30 +104,30 @@ public class ServerFacadeTests {
         }
 
         // Try to login with wrong password
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.login(TEST_USERNAME, "wrongPassword");
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.login(TEST_USERNAME, "wrongPassword")
+        );
         assertEquals(401, exception.getStatusCode());
 
         // Try to login with non-existent username
-        exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.login("nonexistentUser", TEST_PASSWORD);
-        });
+        exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.login("nonexistentUser", TEST_PASSWORD)
+        );
         assertEquals(401, exception.getStatusCode());
     }
 
     @Test
     public void testLoginInvalidInput() {
         // Test with empty username
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.login("", TEST_PASSWORD);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.login("", TEST_PASSWORD)
+        );
         assertTrue(exception.getMessage().contains("failure"));
 
         // Test with empty password
-        exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.login(TEST_USERNAME, "");
-        });
+        exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.login(TEST_USERNAME, "")
+        );
         assertTrue(exception.getMessage().contains("failure"));
     }
 
@@ -137,17 +140,17 @@ public class ServerFacadeTests {
         serverFacade.logout(authData.authToken());
         
         // Try to logout again with the same token (should fail)
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.logout(authData.authToken());
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.logout(authData.authToken())
+        );
         assertEquals(401, exception.getStatusCode());
     }
 
     @Test
     public void testLogoutInvalidToken() {
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.logout("invalid-token");
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.logout("invalid-token")
+        );
         assertEquals(401, exception.getStatusCode());
     }
 
@@ -168,9 +171,9 @@ public class ServerFacadeTests {
     @Test
     public void testCreateGameUnauthorized() {
         // Attempt to create a game with an invalid auth token
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.createGame("invalid-token", "someGame");
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.createGame("invalid-token", "someGame")
+        );
 
         assertEquals(401, exception.getStatusCode(), "Should return 401 for unauthorized create game");
     }
@@ -188,7 +191,7 @@ public class ServerFacadeTests {
         assertFalse(games.isEmpty(), "Games list should not be empty");
         assertEquals(1, games.size(), "Should have exactly one game");
         
-        GameData game = games.get(0);
+        GameData game = games.getFirst();
         assertEquals(gameName, game.gameName(), "Game name should match");
         assertEquals(gameId, game.gameID(), "Game ID should match");
         assertNull(game.whiteUsername(), "White username should be null for new game");
@@ -206,9 +209,9 @@ public class ServerFacadeTests {
     @Test
     public void listGamesUnauthorized() {
         // Try to list games with invalid auth token
-        assertThrows(ResponseException.class, () -> {
-            serverFacade.listGames("invalid-token");
-        }, "Should throw ResponseException for invalid auth token");
+        assertThrows(ResponseException.class, () -> 
+            serverFacade.listGames("invalid-token")
+        , "Should throw ResponseException for invalid auth token");
     }
 
     @Test
@@ -245,7 +248,7 @@ public class ServerFacadeTests {
 
         // Verify the game state
         var games = serverFacade.listGames(authToken);
-        GameData game = games.get(0);
+        GameData game = games.getFirst();
         assertEquals(TEST_USERNAME, game.whiteUsername(), "White username should be set");
         assertNull(game.blackUsername(), "Black username should still be null");
     }
@@ -268,7 +271,7 @@ public class ServerFacadeTests {
 
         // Verify the game state
         var games = serverFacade.listGames(authToken);
-        GameData game = games.get(0);
+        GameData game = games.getFirst();
         assertEquals(TEST_USERNAME, game.whiteUsername(), "White username should be set");
         assertEquals(secondUser, game.blackUsername(), "Black username should be set");
     }
@@ -287,27 +290,27 @@ public class ServerFacadeTests {
         serverFacade.joinGame(authToken, gameId, ChessGame.TeamColor.WHITE);
 
         // Try to join as white again
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.joinGame(secondAuthToken, gameId, ChessGame.TeamColor.WHITE);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.joinGame(secondAuthToken, gameId, ChessGame.TeamColor.WHITE)
+        );
         assertEquals(403, exception.getStatusCode(), "Should return 403 for taken color");
     }
 
     @Test
     public void joinGameUnauthorized() {
         // Try to join a game with invalid auth token
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.joinGame("invalid-token", 1, ChessGame.TeamColor.WHITE);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.joinGame("invalid-token", 1, ChessGame.TeamColor.WHITE)
+        );
         assertEquals(401, exception.getStatusCode(), "Should return 401 for unauthorized join");
     }
 
     @Test
     public void joinGameNonexistent() throws ResponseException {
         // Try to join a non-existent game
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.joinGame(authToken, 999, ChessGame.TeamColor.WHITE);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.joinGame(authToken, 999, ChessGame.TeamColor.WHITE)
+        );
         assertEquals(400, exception.getStatusCode(), "Should return 400 for non-existent game");
     }
 
@@ -322,7 +325,7 @@ public class ServerFacadeTests {
 
         // Verify the game state (should be unchanged)
         var games = serverFacade.listGames(authToken);
-        GameData game = games.get(0);
+        GameData game = games.getFirst();
         assertNull(game.whiteUsername(), "White username should still be null");
         assertNull(game.blackUsername(), "Black username should still be null");
     }
@@ -330,18 +333,18 @@ public class ServerFacadeTests {
     @Test
     public void observeGameUnauthorized() {
         // Try to observe a game with invalid auth token
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.observeGame("invalid-token", 1);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.observeGame("invalid-token", 1)
+        );
         assertEquals(401, exception.getStatusCode(), "Should return 401 for unauthorized observe");
     }
 
     @Test
     public void observeGameNonexistent() throws ResponseException {
         // Try to observe a non-existent game
-        ResponseException exception = assertThrows(ResponseException.class, () -> {
-            serverFacade.observeGame(authToken, 999);
-        });
+        ResponseException exception = assertThrows(ResponseException.class, () -> 
+            serverFacade.observeGame(authToken, 999)
+        );
         assertEquals(400, exception.getStatusCode(), "Should return 400 for non-existent game");
     }
 } 
